# mkdocs-techdocs-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build-e2e-image.sh  catalog-info.yaml  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  renovate.json  renovate.json5
.github/workflows/: automate-stale.yml  automated-versioning.yml  lint.yml  manual-versioning.yml  project-board.yml  pypi-publish.yml  test.yml  validate-renovate.yml
.github/workflows/scripts/: notify-consumers.py
src/: core.py  test_core.py
techdocs_core/: core.py  test_core.py
test-fixtures/: mkdocs.yml
test-fixtures/docs/: index.md  other.md  target.md
