[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

name = "mkdocs-techdocs-core"
version = "1.5.4"
description = """The core MkDocs plugin used by Backstage's TechDocs as a wrapper around multiple MkDocs plugins and Python Markdown extensions"""
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
keywords = ["mkdocs"]
authors = [
    {name = "TechDocs Core", email = "protean@spotify.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["dependencies"]

[project.entry-points]
"mkdocs.plugins" = {"techdocs-core" = "techdocs_core.core:TechDocsCore"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["techdocs_core"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
